syntax = "proto3";

package chain;

import "vendor/github.com/hyperledger/fabric/protos/ledger/rwset/kvrwset/kv_rwset.proto";

message ReqInfo {
    string configID = 1;
    string channelID = 2;
}

message ReqBlockByHeight {
    string configID = 1;
    string channelID = 2;
    uint64 height = 3;
}

message ReqBlockByHash {
    string configID = 1;
    string channelID = 2;
    string hash = 3;
}

message ReqBlockByTxID {
    string configID = 1;
    string channelID = 2;
    string txID = 3;
}

message ReqInfoSpec {
    string configID = 1;
    string channelID = 2;
    string orgName = 3;
    string orgUser = 4;
}

message ReqBlockByHeightSpec {
    string configID = 1;
    string channelID = 2;
    string orgName = 3;
    string orgUser = 4;
    uint64 height = 5;
}

message ReqBlockByHashSpec {
    string configID = 1;
    string channelID = 2;
    string orgName = 3;
    string orgUser = 4;
    string hash = 5;
}

message ReqBlockByTxIDSpec {
    string configID = 1;
    string channelID = 2;
    string orgName = 3;
    string orgUser = 4;
    string txID = 5;
}

message ChannelInfo {
    string endorser = 1;
    int32 status = 2;
    BCI bci = 3;
}

message BCI {
    uint64 height = 1;
    string currentBlockHash = 2;
    string previousBlockHash = 3;
}

message Block {
    BlockHeader header = 2;
    BlockMetadata metadata = 4;
    repeated Envelope envelopes = 5;
}

message BlockHeader {
    uint64 blockNumber = 1;
    string previousHash = 2;
    string dataHash = 3;
    int32 envelopeCount = 4;
    int32 txCount = 5;
    int32 rwCount = 6;
}

message Envelope {
    string channelID = 1;
    string type = 2;
    int32 version = 3;
    Timestamp timestamp = 4;
    string transactionID = 5;
    uint64 epoch = 6;
    string extension = 7;
    string tlsCertHash = 8;
    Transaction transactionEnvelopeInfo = 9;
    string createID = 10;
    string mspID = 11;
    string nonce = 12;
    string signature = 13;
    ChainCodeHeaderExtension chainCode = 14;
    bool isValid = 15;
}

message Transaction {
    int32 txCount = 1;
    repeated Action transactionActionInfoArray = 2;
}

message Action {
    ChainCodeActionPayload chainCodeActionPayload = 1;
}

message ChainCodeAction {
    ChainCodeID chainCodeID = 1;
    TxRwSet txRwSet = 2;
    ChainCodeEvent event = 3;
    Response response = 4;
}

message TxRwSet {
    int32 rwCount = 1;
    repeated NsRwSets nsRwSets = 2;
}

message NsRwSets {
    string nameSpace = 1;
    KVRWSet KVRWSet = 2;
}

message KVRWSet {
    repeated KVRead reads = 1;
    repeated kvrwset.RangeQueryInfo rangeQueriesInfo = 2;
    repeated KVWrite writes = 3;
    repeated kvrwset.KVMetadataWrite metadataWrites = 4;
}

message KVRead {
    string key = 1;
    Version version = 2;
}

message Version {
    uint64 blockNum = 1;
    uint64 txNum = 2;
}

message KVWrite {
    string key = 1;
    bool isDelete = 2;
    oneof data {
        string value = 3;
        ChainCodeValue CCValue = 4;
    }
}

message ChainCodeValue {
    string name = 1;
    string version = 2;
    string escc = 3;
    string vscc = 4;
    string policy = 5;
    ChainCodeValueDate data = 6;
    string id = 7;
    repeated string instantiationPolicy = 8;
}

message ChainCodeValueDate {
    string codeHash = 1;
    string metaDataHash = 2;
}

message KVMetadataWrite {
    string key = 1;
    repeated KVMetadataEntry entries = 2;
}

message KVMetadataEntry {
    string name = 1;
    bytes value = 2;
}

message ChainCodeEvent {
    string chainCodeID = 1;
    string transactionID = 2;
    string eventName = 3;
    string payload = 4;
}

message Response {
    int32 Status = 1;
    string Message = 2;
    oneof data {
        string value = 3;
        ChainCodeValue CCValue = 4;
    }
}

message ChainCodeActionPayload {
    ChainCodeInvocationSpec chainCodeProposalPayload = 1;
    ChainCodeEndorsedAction chainCodeEndorsedAction = 2;
}

message ChainCodeInvocationSpec {
    ChainCodeSpec chainCodeSpec = 1;
}

message ChainCodeSpec {
    string type = 1;
    ChainCodeID chainCodeID = 2;
    ChainCodeInput input = 3;
    int32 timeout = 4;
}

message ChainCodeInput {
    repeated string args = 1;
}

message ChainCodeEndorsedAction {
    ProposalResponsePayload proposalResponsePayload = 1;
    repeated Endorsement endorsements = 2;
}

message ProposalResponsePayload {
    string proposalHash = 1;
    ChainCodeAction chainCodeAction = 2;
}

message Endorsement {
    string createID = 1;
    string mspID = 2;
    string signature = 3;
}

message ChainCodeHeaderExtension {
    string payloadVisibility = 1;
    ChainCodeID chainCodeID = 2;
}

message ChainCodeID {
    string path = 1;
    string name = 2;
    string version = 3;
}

message Timestamp {
    int64 seconds = 1;
    int32 nanos = 2;
}

message Payload {
    ChannelHandler channelHandler = 1;
    SignatureHeader signatureHeader = 2;
    Transaction transaction = 3;
}

message ChannelHandler {
    string channelID = 1;
    int32 type = 2;
    int32 version = 3;
    Timestamp timestamp = 4;
    string txID = 5;
    uint64 epoch = 6;
    string extension = 7;
    string tlsCertHash = 8;
}

message SignatureHeader {
    string creator = 1;
    string nonce = 2;
}

message BlockMetadata {
    repeated string metadata = 1;
}